[tool.poetry]
name = "dialogue-draft"
version = "0.1.0"
description = ""
authors = ["kyashy <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = "^20231117"
gradio = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
