[tool.poetry]
name = "dialogue-draft"
version = "0.1.0"
description = ""
authors = ["kyashy <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = "20240930"
gradio = "^4.4.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
